--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,36 @@
 [submodule "digitalclock"]
 	path = digitalclock
-	url = ./digitalclock
-	branch = shroysha/digitalclock
+	url = https://github.com/shroysha/digitalclock.git
+	branch = master
 [submodule "facebookrss"]
 	path = facebookrss
-	url = ./facebookrss
-	branch = shroysha/facebookrss
+	url = https://github.com/shroysha/facebookrss.git
+	branch = master
 [submodule "googler"]
 	path = googler
-	url = ./googler
-	branch = shroysha/googler
+	url = https://github.com/shroysha/googler.git
+	branch = master
 [submodule "hiddenfiletoggle"]
 	path = hiddenfiletoggle
-	url = ./hiddenfiletoggle
-	branch = shroysha/hiddenfiletoggle
+	url = https://github.com/shroysha/hiddenfiletoggle.git
+	branch = master
 [submodule "mediaserver"]
 	path = mediaserver
-	url = ./mediaserver
-	branch = shroysha/mediaserver
+	url = https://github.com/shroysha/mediaserver.git
+	branch = master
 [submodule "mp3rename"]
 	path = mp3rename
-	url = ./mp3rename
-	branch = shroysha/mp3rename
+	url = https://github.com/shroysha/mp3rename.git
+	branch = master
 [submodule "passwordbank"]
 	path = passwordbank
-	url = ./passwordbank
-	branch = shroysha/passwordbank
+	url = https://github.com/shroysha/passwordbank.git
+	branch = master
 [submodule "school"]
 	path = school
-	url = ./school
-	branch = shroysha/school
+	url = https://github.com/shroysha/school.git
+	branch = master
 [submodule "yahooweather"]
 	path = yahooweather
-	url = ./yahooweather
-	branch = shroysha/yahooweather
+	url = https://github.com/shroysha/yahooweather.git
+	branch = master
